linked database to project

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "Project-Two",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/rhaniehalim/Project-Two#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0"
