writing html for survey

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/rhaniehalim/Project-Two#readme",
   "dependencies": {
+    "chart.js": "^2.7.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.4",
