--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt-nodejs": "0.0.3",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "express-mysql-session": "^2.1.0",
     "express-session": "^1.15.6",
     "mysql2": "^1.6.4",
     "passport": "^0.4.0",
